--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,16 @@
         "name": "next"
       }
     ],
+    // --- START OF FIX ---
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"] ,
+      "@/lib/*": ["./lib/*"] ,
+      "@/components/*": ["./app/components/*"] ,
+      "@/api/*": ["./app/api/*"] ,
     }
+    // --- END OF FIX ---
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts",   "next-auth.d.ts"],
   "exclude": ["node_modules"]
 }
