--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     }
     // --- END OF FIX ---
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts",   "next-auth.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts",   "auth.d.ts"],
   "exclude": ["node_modules"]
 }
